--- a/.github/workflows/REUSABLE_backend.yml
+++ b/.github/workflows/REUSABLE_backend.yml
@@ -25,7 +25,7 @@ on:
         description: Versions of PHP to test with. Should be array of strings encoded as JSON array
         type: string
         required: false
-        default: '["7.3", "7.4", "8.0", "8.1", "8.2", "8.3"]'
+        default: '["7.3", "7.4", "8.0", "8.1", "8.2", "8.3", "8.4"]'
 
       php_extensions:
         description: PHP extensions to install.
@@ -105,8 +105,8 @@ jobs:
             php_ini_values: error_reporting=E_ALL & ~E_DEPRECATED & ~E_USER_DEPRECATED
           - php: 8.3
             php_ini_values: error_reporting=E_ALL & ~E_DEPRECATED & ~E_USER_DEPRECATED
-          # - php: 8.4
-          #   php_ini_values: error_reporting=E_ALL & ~E_DEPRECATED & ~E_USER_DEPRECATED
+          - php: 8.4
+            php_ini_values: error_reporting=E_ALL & ~E_DEPRECATED & ~E_USER_DEPRECATED
 
         # To reduce number of actions, we exclude some PHP versions from running with some DB versions.
         exclude:
@@ -179,8 +179,8 @@ jobs:
     strategy:
       matrix:
         php: ${{ fromJSON(inputs.php_versions) }}
-        # exclude:
-        #   - php: 8.4
+        exclude:
+          - php: 8.4
 
     name: 'PHPStan PHP ${{ matrix.php }}'
 
