--- a/composer.json
+++ b/composer.json
@@ -171,7 +171,7 @@
         "mockery/mockery": "^1.5",
         "phpunit/phpunit": "^11.0",
         "phpstan/phpstan": "^1.10.0",
-        "larastan/larastan": "^2.7",
+        "larastan/larastan": "2.9.12",
         "symfony/var-dumper": "^7.0"
     },
     "config": {
