--- a/php-packages/phpstan/composer.json
+++ b/php-packages/phpstan/composer.json
@@ -6,7 +6,7 @@
     "require": {
         "flarum/testing": "^2.0",
         "phpstan/phpstan": "^1.10.0",
-        "larastan/larastan": "^2.7"
+        "larastan/larastan": "2.9.12"
     },
     "autoload": {
         "psr-4": {
