--- a/composer.json
+++ b/composer.json
@@ -172,7 +172,8 @@
         "phpunit/phpunit": "^11.0",
         "phpstan/phpstan": "^1.10.0",
         "larastan/larastan": "2.9.12",
-        "symfony/var-dumper": "^7.0"
+        "symfony/var-dumper": "^7.0",
+        "flarum/testing-tests": "*@dev"
     },
     "config": {
         "sort-packages": true
@@ -217,5 +218,11 @@
     },
     "scripts-descriptions": {
         "analyse:phpstan": "Run static analysis"
-    }
+    },
+    "repositories": [
+        {
+            "type": "path",
+            "url": "php-packages/testing/tests"
+        }
+    ]
 }
