--- a/extensions/lang-english/composer.json
+++ b/extensions/lang-english/composer.json
@@ -7,7 +7,7 @@
     ],
     "license": "MIT",
     "require": {
-        "flarum/core": "^2.0"
+        "flarum/core": "^2.0.0-beta.1"
     },
     "extra": {
         "branch-alias": {
