fix: custom styles from 1.x can crash the app (#4159)

--- a/.editorconfig
+++ b/.editorconfig
@@ -18,7 +18,7 @@ trim_trailing_whitespace = false
 [*.{php,xml,json}]
 indent_size = 4
 
-[{tsconfig.json,prettierrc.json}]
+[{tsconfig.json,prettierrc.json,package.json}]
 indent_size = 2
 
 [*.neon]
