--- a/php-packages/phpstan/phpstan-baseline.neon
+++ b/php-packages/phpstan/phpstan-baseline.neon
@@ -15,12 +15,12 @@ parameters:
 		  reportUnmatched: false
 
 		#	We ignore this because resolve can either take a class name as the generic return type or just a binding name.
-		- message: "#Template type T of function resolve[()]{2} is not referenced in a parameter.#"
+		- message: "#Template type T of function resolve[\\(\\)]{2} is not referenced in a parameter.#"
 		  reportUnmatched: false
 
 		#	We ignore new static errors because we want extensibility.
 		#	@TODO: needs discussion.
-		- message: "#^Unsafe usage of new static[()]{2}.$#"
+		- message: "#^Unsafe usage of new static[\\(\\)]{2}.$#"
 		  reportUnmatched: false
 		- message: "#^Static access to instance property .*#"
 		  reportUnmatched: false
@@ -34,11 +34,11 @@ parameters:
 		# and the implementation only accepts two of them, PHPStan complains.
 		# At the time of adding this error, there are no configuration values to make it
 		# ignore this error, so we have to ignore it globally.
-		- message: '#^Parameter \#[0-9]+ \$[A-z0-9_]+ of method Flarum\Extend\[A-z0-9_:\\()]+ expects \(?callable\([A-z0-9_,|\\: ()-]+\)\)?, (callable|Closure)\([A-z0-9_,|\\: ()-]+\) given\.$#'
+		- message: '#^Parameter \#[0-9]+ \$[A-z0-9_]+ of method Flarum\Extend\[A-z0-9_:\\\\(\\)]+ expects \(?callable\([A-z0-9_,|\\: \\(\\)-]+\)\)?, (callable|Closure)\([A-z0-9_,|\\: \\(\\)-]+\) given\.$#'
 		  reportUnmatched: false
 
 		# PHPStan suddenly doesn't recognize callables can be function names?
-		- message: '#^Parameter \#[0-9]+ \$[A-z0-9_]+ of function [A-z0-9_:\\()]+ expects \(?callable\([A-z0-9_,|\\: ()-]+, ''[A-z0-9_:\\()]+'' given\.$#'
+		- message: '#^Parameter \#[0-9]+ \$[A-z0-9_]+ of function [A-z0-9_:\\\\(\\)]+ expects \(?callable\([A-z0-9_,|\\: \\(\\)-]+, ''[A-z0-9_:\\\\(\\)]+'' given\.$#'
 		  reportUnmatched: false
 
 		# Not if we're using our own static make method.
